<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telNumber"
            android:textColor="#00f"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_telNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hint_telNum" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="20"
            android:paddingTop="3dip"
            android:scrollbars="vertical"
            android:textColor="#603912"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back03"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_back"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_send"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>