<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_noteTitle"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_noteTitle"
            android:selectAllOnFocus="true" />

        <Spinner
            android:id="@+id/spinner_noteType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:popupBackground="#FDC5AA"/>
        <EditText
            android:id="@+id/et_noteContent"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="15"
            android:gravity="top"
            android:hint="@string/hint_noteContent"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back01"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_back"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
      	<!-- 分隔线  -->
		<View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />
        <Button
            android:id="@+id/btn_save01"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_save"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>