<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_allnotes"
                android:layout_width="27dip"
                android:layout_height="27dip"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/img31"
                android:contentDescription="@string/imagesDesc" />

            <TextView
                android:id="@+id/tv_allnotes"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="#00f"
                android:text="@string/allNotes"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tvNum_allnotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip"
                android:textColor="#00f"
                android:textStyle="bold"
                android:textSize="19sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:background="@drawable/mygradient" />

        <ListView
            android:id="@+id/lv01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_mainInterface"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/main"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
        <!-- 分隔线 -->

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_addnote"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/search"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_addType"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/addType"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>