<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="3dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/hint_search" />

            <Button
                android:id="@+id/btn_searchNotes"
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/btn_search"
                android:textColor="#fff"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <ListView
            android:id="@+id/lv03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_mainInterface"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/main"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_addnote"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_search"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_addType"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/addType"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>