<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dip"
            android:textColor="#060CFE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:background="@drawable/mygradient" />

        <TextView
            android:id="@+id/tv_noteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="20"
            android:paddingTop="3dip"
            android:textColor="#603912"
            android:scrollbars="vertical"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back02"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_back"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_edit02"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_selector"
            android:text="@string/btn_edit"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btn_delete02"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/btn_delete"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>